--- a/notebook/GDP .ipynb
+++ b/notebook/GDP .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "36562a15",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1efae9d5",
    "metadata": {},
    "outputs": [],
@@ -25,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "47d7d332",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdp_df = pd.read_csv(\"../data/gdp_percapita.csv\")"
+    "gdp_df = pd.read_csv(\"../data/gdp_percapita.csv\", nrows=6868)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "86eb4af8",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "4     Afghanistan  2015  2068.265904              NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "7479087b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "internet_df = pd.read_csv(\"../data/internet_use.csv\", nrows=4496)"
+    "internet_df = pd.read_csv(\"../data/internet_use.csv\", nrows=4495)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "0dded5ac",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "4     Afghanistan  2010  4.000000              NaN"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "8566d9bd",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "1cc02cac",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "3170ed98",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "fe0d2c94",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "45f8f361",
    "metadata": {},
    "outputs": [
@@ -363,6 +363,20 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6858</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>3600.849291</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6859</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>3653.920016</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>6860</th>\n",
        "      <td>Zimbabwe</td>\n",
@@ -419,51 +433,25 @@
        "      <td>3324.348171</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6868</th>\n",
-       "      <td>footnoteSeqID</td>\n",
-       "      <td>Footnote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6869</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Excludes South Sudan after July 9, 2011.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country or Area                                      Year        Value  \\\n",
-       "6860        Zimbabwe                                      1997  3580.048793   \n",
-       "6861        Zimbabwe                                      1996  3520.430146   \n",
-       "6862        Zimbabwe                                      1995  3226.413930   \n",
-       "6863        Zimbabwe                                      1994  3263.934978   \n",
-       "6864        Zimbabwe                                      1993  3033.504852   \n",
-       "6865        Zimbabwe                                      1992  3054.889178   \n",
-       "6866        Zimbabwe                                      1991  3426.598094   \n",
-       "6867        Zimbabwe                                      1990  3324.348171   \n",
-       "6868   footnoteSeqID                                  Footnote          NaN   \n",
-       "6869               2  Excludes South Sudan after July 9, 2011.          NaN   \n",
-       "\n",
-       "      Value Footnotes  \n",
-       "6860              NaN  \n",
-       "6861              NaN  \n",
-       "6862              NaN  \n",
-       "6863              NaN  \n",
-       "6864              NaN  \n",
-       "6865              NaN  \n",
-       "6866              NaN  \n",
-       "6867              NaN  \n",
-       "6868              NaN  \n",
-       "6869              NaN  "
+       "     Country or Area  Year        Value  Value Footnotes\n",
+       "6858        Zimbabwe  1999  3600.849291              NaN\n",
+       "6859        Zimbabwe  1998  3653.920016              NaN\n",
+       "6860        Zimbabwe  1997  3580.048793              NaN\n",
+       "6861        Zimbabwe  1996  3520.430146              NaN\n",
+       "6862        Zimbabwe  1995  3226.413930              NaN\n",
+       "6863        Zimbabwe  1994  3263.934978              NaN\n",
+       "6864        Zimbabwe  1993  3033.504852              NaN\n",
+       "6865        Zimbabwe  1992  3054.889178              NaN\n",
+       "6866        Zimbabwe  1991  3426.598094              NaN\n",
+       "6867        Zimbabwe  1990  3324.348171              NaN"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "1b395974",
    "metadata": {},
    "outputs": [
@@ -506,6 +494,13 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4485</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>3.994356</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>4486</th>\n",
        "      <td>Zimbabwe</td>\n",
@@ -569,32 +564,25 @@
        "      <td>0.000000</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4495</th>\n",
-       "      <td>footnoteSeqID</td>\n",
-       "      <td>Footnote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country or Area      Year     Value  Value Footnotes\n",
-       "4486        Zimbabwe      2001  0.799846              NaN\n",
-       "4487        Zimbabwe      2000  0.401434              NaN\n",
-       "4488        Zimbabwe      1999  0.161676              NaN\n",
-       "4489        Zimbabwe      1998  0.081648              NaN\n",
-       "4490        Zimbabwe      1997  0.033080              NaN\n",
-       "4491        Zimbabwe      1996  0.016790              NaN\n",
-       "4492        Zimbabwe      1995  0.007684              NaN\n",
-       "4493        Zimbabwe      1994  0.001739              NaN\n",
-       "4494        Zimbabwe      1990  0.000000              NaN\n",
-       "4495   footnoteSeqID  Footnote       NaN              NaN"
+       "     Country or Area  Year     Value  Value Footnotes\n",
+       "4485        Zimbabwe  2002  3.994356              NaN\n",
+       "4486        Zimbabwe  2001  0.799846              NaN\n",
+       "4487        Zimbabwe  2000  0.401434              NaN\n",
+       "4488        Zimbabwe  1999  0.161676              NaN\n",
+       "4489        Zimbabwe  1998  0.081648              NaN\n",
+       "4490        Zimbabwe  1997  0.033080              NaN\n",
+       "4491        Zimbabwe  1996  0.016790              NaN\n",
+       "4492        Zimbabwe  1995  0.007684              NaN\n",
+       "4493        Zimbabwe  1994  0.001739              NaN\n",
+       "4494        Zimbabwe  1990  0.000000              NaN"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "114168ac",
    "metadata": {},
    "outputs": [
@@ -681,6 +669,18 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>6863</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>3263.934978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6864</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>3033.504852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>6865</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>1992</td>\n",
@@ -698,41 +698,29 @@
        "      <td>1990</td>\n",
        "      <td>3324.348171</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6868</th>\n",
-       "      <td>footnoteSeqID</td>\n",
-       "      <td>Footnote</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6869</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Excludes South Sudan after July 9, 2011.</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6870 rows × 3 columns</p>\n",
+       "<p>6868 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country or Area                                      Year        Value\n",
-       "0        Afghanistan                                      2019  2065.036398\n",
-       "1        Afghanistan                                      2018  2033.779002\n",
-       "2        Afghanistan                                      2017  2058.383832\n",
-       "3        Afghanistan                                      2016  2057.062164\n",
-       "4        Afghanistan                                      2015  2068.265904\n",
-       "...              ...                                       ...          ...\n",
-       "6865        Zimbabwe                                      1992  3054.889178\n",
-       "6866        Zimbabwe                                      1991  3426.598094\n",
-       "6867        Zimbabwe                                      1990  3324.348171\n",
-       "6868   footnoteSeqID                                  Footnote          NaN\n",
-       "6869               2  Excludes South Sudan after July 9, 2011.          NaN\n",
+       "     Country or Area  Year        Value\n",
+       "0        Afghanistan  2019  2065.036398\n",
+       "1        Afghanistan  2018  2033.779002\n",
+       "2        Afghanistan  2017  2058.383832\n",
+       "3        Afghanistan  2016  2057.062164\n",
+       "4        Afghanistan  2015  2068.265904\n",
+       "...              ...   ...          ...\n",
+       "6863        Zimbabwe  1994  3263.934978\n",
+       "6864        Zimbabwe  1993  3033.504852\n",
+       "6865        Zimbabwe  1992  3054.889178\n",
+       "6866        Zimbabwe  1991  3426.598094\n",
+       "6867        Zimbabwe  1990  3324.348171\n",
        "\n",
-       "[6870 rows x 3 columns]"
+       "[6868 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "66475d23",
    "metadata": {},
    "outputs": [
@@ -811,6 +799,12 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>4490</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>0.033080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4491</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>1996</td>\n",
@@ -834,35 +828,29 @@
        "      <td>1990</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4495</th>\n",
-       "      <td>footnoteSeqID</td>\n",
-       "      <td>Footnote</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4496 rows × 3 columns</p>\n",
+       "<p>4495 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country or Area      Year     Value\n",
-       "0        Afghanistan      2014  6.390000\n",
-       "1        Afghanistan      2013  5.900000\n",
-       "2        Afghanistan      2012  5.454545\n",
-       "3        Afghanistan      2011  5.000000\n",
-       "4        Afghanistan      2010  4.000000\n",
-       "...              ...       ...       ...\n",
-       "4491        Zimbabwe      1996  0.016790\n",
-       "4492        Zimbabwe      1995  0.007684\n",
-       "4493        Zimbabwe      1994  0.001739\n",
-       "4494        Zimbabwe      1990  0.000000\n",
-       "4495   footnoteSeqID  Footnote       NaN\n",
+       "     Country or Area  Year     Value\n",
+       "0        Afghanistan  2014  6.390000\n",
+       "1        Afghanistan  2013  5.900000\n",
+       "2        Afghanistan  2012  5.454545\n",
+       "3        Afghanistan  2011  5.000000\n",
+       "4        Afghanistan  2010  4.000000\n",
+       "...              ...   ...       ...\n",
+       "4490        Zimbabwe  1997  0.033080\n",
+       "4491        Zimbabwe  1996  0.016790\n",
+       "4492        Zimbabwe  1995  0.007684\n",
+       "4493        Zimbabwe  1994  0.001739\n",
+       "4494        Zimbabwe  1990  0.000000\n",
        "\n",
-       "[4496 rows x 3 columns]"
+       "[4495 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "0762aef3",
    "metadata": {},
    "outputs": [],
@@ -894,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "8f7877eb",
    "metadata": {},
    "outputs": [
@@ -925,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "e01f611d",
    "metadata": {},
    "outputs": [],
@@ -938,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "71ef3906",
    "metadata": {},
    "outputs": [
