--- a/notebook/GDP .ipynb
+++ b/notebook/GDP .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "36562a15",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1efae9d5",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "47d7d332",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "86eb4af8",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "4     Afghanistan  2015  2068.265904              NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "7479087b",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0dded5ac",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "4     Afghanistan  2010  4.000000              NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8566d9bd",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6870, 4)\n"
+      "(6868, 4)\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "1cc02cac",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4496, 4)\n"
+      "(4495, 4)\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3170ed98",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
      "output_type": "stream",
      "text": [
       "Country or Area     object\n",
-      "Year                object\n",
+      "Year                 int64\n",
       "Value              float64\n",
       "Value Footnotes    float64\n",
       "dtype: object\n"
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "fe0d2c94",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
      "output_type": "stream",
      "text": [
       "Country or Area     object\n",
-      "Year                object\n",
+      "Year                 int64\n",
       "Value              float64\n",
       "Value Footnotes    float64\n",
       "dtype: object\n"
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "45f8f361",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
        "6867        Zimbabwe  1990  3324.348171              NaN"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "1b395974",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
        "4494        Zimbabwe  1990  0.000000              NaN"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "114168ac",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
        "[6868 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "66475d23",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "[4495 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "0762aef3",
    "metadata": {},
    "outputs": [],
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "8f7877eb",
    "metadata": {},
    "outputs": [
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "e01f611d",
    "metadata": {},
    "outputs": [],
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "71ef3906",
    "metadata": {},
    "outputs": [
@@ -952,13 +952,202 @@
    "id": "2e8f4513",
    "metadata": {},
    "source": [
-    "#### 10.\tMerge the two DataFrames to one. Merge **all rows** from each of the two DataFrames. Call the new DataFrame `gdp_and_internet_use`.\n"
+    "#### 10.\tMerge the two DataFrames to one. Merge **all rows** from each of the two DataFrames. Call the new DataFrame `gdp_and_internet_use`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2152759d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdp_and_internet_use = pd.concat([gdp_df, internet_df], join='outer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9123ed4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Country  Year  GDP_Per_Capita  Value Footnotes  Internet_Users_Pct\n",
+      "0     Afghanistan  2019     2065.036398              NaN                 NaN\n",
+      "1     Afghanistan  2018     2033.779002              NaN                 NaN\n",
+      "2     Afghanistan  2017     2058.383832              NaN                 NaN\n",
+      "3     Afghanistan  2016     2057.062164              NaN                 NaN\n",
+      "4     Afghanistan  2015     2068.265904              NaN                 NaN\n",
+      "...           ...   ...             ...              ...                 ...\n",
+      "4490     Zimbabwe  1997             NaN              NaN            0.033080\n",
+      "4491     Zimbabwe  1996             NaN              NaN            0.016790\n",
+      "4492     Zimbabwe  1995             NaN              NaN            0.007684\n",
+      "4493     Zimbabwe  1994             NaN              NaN            0.001739\n",
+      "4494     Zimbabwe  1990             NaN              NaN            0.000000\n",
+      "\n",
+      "[11363 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gdp_and_internet_use)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad93dff",
+   "metadata": {},
+   "source": [
+    "### 11.\tLook at the first five rows of your new DataFrame to confirm it merged correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f48ef541",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Country  Year  GDP_Per_Capita  Value Footnotes  Internet_Users_Pct\n",
+      "0  Afghanistan  2019     2065.036398              NaN                 NaN\n",
+      "1  Afghanistan  2018     2033.779002              NaN                 NaN\n",
+      "2  Afghanistan  2017     2058.383832              NaN                 NaN\n",
+      "3  Afghanistan  2016     2057.062164              NaN                 NaN\n",
+      "4  Afghanistan  2015     2068.265904              NaN                 NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gdp_and_internet_use.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6251457",
+   "metadata": {},
+   "source": [
+    "##### 12.\tLook at the last five rows to make sure the data is clean and as expected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f0c13f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Country  Year  GDP_Per_Capita  Value Footnotes  Internet_Users_Pct\n",
+      "4490  Zimbabwe  1997             NaN              NaN            0.033080\n",
+      "4491  Zimbabwe  1996             NaN              NaN            0.016790\n",
+      "4492  Zimbabwe  1995             NaN              NaN            0.007684\n",
+      "4493  Zimbabwe  1994             NaN              NaN            0.001739\n",
+      "4494  Zimbabwe  1990             NaN              NaN            0.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gdp_and_internet_use.tail())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "329ec465",
+   "metadata": {},
+   "source": [
+    "#### 13.\tSubset the combined DataFrame to keep only the data for 2004, 2009, and 2014. Check that this happened correctly.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9ee8d7e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    Country  Year  GDP_Per_Capita  Value Footnotes  \\\n",
+      "15              Afghanistan  2004     1200.278256              NaN   \n",
+      "33                  Albania  2004     7604.838002              NaN   \n",
+      "63                  Algeria  2004    10058.435939              NaN   \n",
+      "93                   Angola  2004     5593.241537              NaN   \n",
+      "123     Antigua and Barbuda  2004    18745.681534              NaN   \n",
+      "...                     ...   ...             ...              ...   \n",
+      "4391               Viet Nam  2012             NaN              NaN   \n",
+      "4411  Virgin Islands (U.S.)  2012             NaN              NaN   \n",
+      "4433                  Yemen  2012             NaN              NaN   \n",
+      "4453                 Zambia  2012             NaN              NaN   \n",
+      "4475               Zimbabwe  2012             NaN              NaN   \n",
+      "\n",
+      "      Internet_Users_Pct  \n",
+      "15                   NaN  \n",
+      "33                   NaN  \n",
+      "63                   NaN  \n",
+      "93                   NaN  \n",
+      "123                  NaN  \n",
+      "...                  ...  \n",
+      "4391             39.4900  \n",
+      "4411             40.5479  \n",
+      "4433             17.4465  \n",
+      "4453             13.4682  \n",
+      "4475             17.0900  \n",
+      "\n",
+      "[1312 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_2004 = gdp_and_internet_use[gdp_and_internet_use.Year == 2004]\n",
+    "df_2009 = gdp_and_internet_use[gdp_and_internet_use.Year == 2009]\n",
+    "df_2012 = gdp_and_internet_use[gdp_and_internet_use.Year == 2012]\n",
+    "\n",
+    "subset_df = pd.concat([df_2004, df_2009, df_2012])\n",
+    "\n",
+    "print(subset_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a6903aa",
+   "metadata": {},
+   "source": [
+    "#### 14.\tCreate three new DataFrames, one for 2004, one for 2009, and one for 2014. Give them meaningful names that aren't too long."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "cfd662e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2004 = gdp_and_internet_use[gdp_and_internet_use.Year == 2004]\n",
+    "df_2009 = gdp_and_internet_use[gdp_and_internet_use.Year == 2009]\n",
+    "df_2012 = gdp_and_internet_use[gdp_and_internet_use.Year == 2012]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d3e5088",
+   "metadata": {},
+   "source": [
+    "15.\tWhich country had the highest percentage of internet users in 2014? What was the percentage? (Try typing the first 3 letters of your DataFrame name and hitting the tab key for auto-complete options)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ead8b8ab",
+   "id": "6a8068ea",
    "metadata": {},
    "outputs": [],
    "source": []
