--- a/notebook/GDP .ipynb
+++ b/notebook/GDP .ipynb
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e057ec24",
+   "id": "2dce16c0",
    "metadata": {},
    "source": [
     "#### 16.\tWhich country had the lowest percentage of internet users in 2014? What was the percentage?"
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e0dbdefc",
+   "id": "6413d422",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30ace709",
+   "id": "5d3bde1e",
    "metadata": {},
    "source": [
     "#### 17. Repeat for 2004 and 2009."
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "937d1460",
+   "id": "21453a0f",
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e74f8db",
+   "id": "7b0e0cfc",
    "metadata": {},
    "source": [
     "#### 21. Which country had the highest gdp per capita in 2014? What was the gdp per capita?"
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "266f8e7d",
+   "id": "01788b1c",
    "metadata": {},
    "outputs": [
     {
@@ -1332,9 +1332,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8365fecc",
+   "metadata": {},
+   "source": [
+    "#### 22. Which country had the lowest gdp per capita in 2014? What was the gdp per capita?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "697c4bb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+      "1047  Central African Republic  2014      822.610458                 NaN\n",
+      "827                    Burundi  2014      886.235777                1.38\n",
+      "3781                    Malawi  2014     1027.208496                5.83\n",
+      "1422           Dem. Rep. Congo  2014     1029.790785                 NaN\n",
+      "4528                     Niger  2014     1127.615541                1.95\n",
+      "...                        ...   ...             ...                 ...\n",
+      "561                    Bermuda  2014    77361.104881               96.80\n",
+      "5464                 Singapore  2014    87808.663157               82.00\n",
+      "5138                     Qatar  2014    95578.416973               91.49\n",
+      "3691                Luxembourg  2014   108760.916030               94.67\n",
+      "3721          Macao SAR, China  2014   156514.133850                 NaN\n",
+      "\n",
+      "[238 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_gdp_2014 = df_2014.sort_values(\n",
+    "     by=\"GDP_Per_Capita\",\n",
+    "     ascending=True,\n",
+    "    )\n",
+    "\n",
+    "print(min_gdp_2014) #Central African Republic 822.610458"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6e410a9",
+   "id": "c63a9b97",
    "metadata": {},
    "outputs": [],
    "source": []
