--- a/notebook/GDP .ipynb
+++ b/notebook/GDP .ipynb
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28982ecd",
+   "id": "ee7b13f4",
    "metadata": {},
    "source": [
     "#### 16.\tWhich country had the lowest percentage of internet users in 2014? What was the percentage?"
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c3304fc7",
+   "id": "322354ef",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d5c47e",
+   "id": "5ac6471c",
    "metadata": {},
    "source": [
     "#### 17. Repeat for 2004 and 2009."
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ff3cc9be",
+   "id": "80a27105",
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c697a0d",
+   "id": "eaa76ea8",
    "metadata": {},
    "source": [
     "#### 21. Which country had the highest gdp per capita in 2014? What was the gdp per capita?"
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2cb5aa3c",
+   "id": "07922aae",
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11161335",
+   "id": "a2d061ec",
    "metadata": {},
    "source": [
     "#### 22. Which country had the lowest gdp per capita in 2014? What was the gdp per capita?"
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d07f89a2",
+   "id": "a3366028",
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b580b12",
+   "id": "b163d2a7",
    "metadata": {},
    "source": [
     "#### 23. Create some scatterplots:  \n",
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "934655a4",
+   "id": "405f6918",
    "metadata": {},
    "source": [
     "   ##### 2004 Scatter Plot"
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "98fdfac8",
+   "id": "c8bcae26",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d49549",
+   "id": "6462ef8b",
    "metadata": {},
    "source": [
     "##### 2009 Scatter Plot"
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "fa5dc0d4",
+   "id": "45c9eb9b",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0490d444",
+   "id": "1776c6e2",
    "metadata": {},
    "source": [
     "##### 2014 Scatter Plot"
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4593b897",
+   "id": "2e5d90c0",
    "metadata": {},
    "outputs": [
     {
@@ -1480,9 +1480,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5495f625",
+   "metadata": {},
+   "source": [
+    "#### 24. Are there differences across years? What do the plots tell you about any relationship between these two variables? Enter your observations as a markdown cell.\n",
+    "\n",
+    "##### As the years have progressed there is a direct relation between the two.  The higher the gdp per capita the higher the internet user percentage is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "222855fd",
+   "metadata": {},
+   "source": [
+    "#### 25. What are the top 5 countries in terms of internet use in 2014?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "212fd06e",
+   "id": "0a92cfe5",
    "metadata": {},
    "outputs": [],
    "source": []
