Finished with Questions (not including the bonus)

--- a/notebook/GDP .ipynb
+++ b/notebook/GDP .ipynb
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f5c2140",
+   "id": "796c2fa2",
    "metadata": {},
    "source": [
     "#### 16.\tWhich country had the lowest percentage of internet users in 2014? What was the percentage?"
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "407e0d22",
+   "id": "01064c6a",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c525073e",
+   "id": "5d166896",
    "metadata": {},
    "source": [
     "#### 17. Repeat for 2004 and 2009."
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "45a36919",
+   "id": "5ea0a952",
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9d8abaf",
+   "id": "9bd36296",
    "metadata": {},
    "source": [
     "#### 21. Which country had the highest gdp per capita in 2014? What was the gdp per capita?"
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "588d4885",
+   "id": "5d784ce8",
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59acff7e",
+   "id": "15c5819e",
    "metadata": {},
    "source": [
     "#### 22. Which country had the lowest gdp per capita in 2014? What was the gdp per capita?"
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "9b93a5ca",
+   "id": "632ced80",
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45326813",
+   "id": "41809108",
    "metadata": {},
    "source": [
     "#### 23. Create some scatterplots:  \n",
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3fead24",
+   "id": "eddb9ea2",
    "metadata": {},
    "source": [
     "   ##### 2004 Scatter Plot"
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "6aa79328",
+   "id": "e97aa486",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35199f6c",
+   "id": "466fbd75",
    "metadata": {},
    "source": [
     "##### 2009 Scatter Plot"
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a644b3f2",
+   "id": "1d1f5705",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a70dc5b",
+   "id": "7bd332d0",
    "metadata": {},
    "source": [
     "##### 2014 Scatter Plot"
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "a8168e25",
+   "id": "e3ee9d61",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bac9056",
+   "id": "ad3a082e",
    "metadata": {},
    "source": [
     "#### 24. Are there differences across years? What do the plots tell you about any relationship between these two variables? Enter your observations as a markdown cell.\n",
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f3e2e5",
+   "id": "0691caba",
    "metadata": {},
    "source": [
     "#### 25. Look at the distribution of gdp per capita values for 2014. Is it unimodal?"
@@ -1500,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "46147092",
+   "id": "5655713c",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db020835",
+   "id": "26fb2125",
    "metadata": {},
    "source": [
     "#### 26.\tLook at the distribution of Internet Use for 2014. Is it unimodal?"
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "59707dc8",
+   "id": "00719758",
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2b232b",
+   "id": "51bf905b",
    "metadata": {},
    "source": [
     "#### 27. What are the top 5 countries in terms of internet use in 2014?"
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "fa32c9df",
+   "id": "952609f8",
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb27a5ca",
+   "id": "66830486",
    "metadata": {},
    "source": [
     "28. ##### Create a DataFrame called top_5_internet **from the combined DataFrame that has all three years _for the 5 countries that had the greatest 2014 internet usage_**. You should have 15 rows. Check that this is true."
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "6291f3b6",
+   "id": "168802ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "d3fb4133",
+   "id": "453974e4",
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e647a586",
+   "id": "beaaf612",
    "metadata": {},
    "source": [
     "#### 29. Create a seaborn FacetGrid to show the internet usage trend across the years 2004, 2009, and 2014 for these 5 countries (those with the highest reported internet use in 2014). Which country had the greatest growth between 2004 and 2014?"
@@ -1651,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "4c7c3f50",
+   "id": "3f327a11",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb140141",
+   "id": "45aac00c",
    "metadata": {},
    "source": [
     "#### 30.Repeat the steps above to look at the trend for the 5 countries with the lowest 2014 internet usage. Which country has consistently had the least internet use?\n"
@@ -1695,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "d042afd7",
+   "id": "f2196ce7",
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1721,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "8246cd32",
+   "id": "fdb8d379",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1736,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "655e4ea4",
+   "id": "404d49af",
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1771,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "691df4d6",
+   "id": "29d1f3c5",
    "metadata": {},
    "outputs": [
     {
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e2070b",
+   "id": "95fa3c9a",
    "metadata": {},
    "source": [
     "#### 31. Find the top 5 countries for 2014 in terms of GDP per capita; create a DataFrame to look at 10-year trends (use 2004, 2009, 2014 to look at the 10-year trend) in gdp per capita for the 5 countries with the highest 2014 GDP per capita. Use a seaborn facet grid for this."
@@ -1813,7 +1813,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "6baeb0b4",
+   "id": "df19515d",
    "metadata": {},
    "outputs": [
     {
@@ -1837,7 +1837,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "59d6ada9",
+   "id": "11848fe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "a67b98af",
+   "id": "2233b5b3",
    "metadata": {},
    "outputs": [
     {
@@ -1887,7 +1887,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "f40d58d6",
+   "id": "918d4ec1",
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af667542",
+   "id": "7863b42a",
    "metadata": {},
    "source": [
     "#### 32. Repeat this one more time to look at 10-year trend for the 5 countries for 2014 with the lowest GDP per capita."
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "fcdb9eb1",
+   "id": "9888e6c6",
    "metadata": {},
    "outputs": [
     {
@@ -1953,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "9d2c1d36",
+   "id": "17b4fc43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "66b5ddce",
+   "id": "c7c7e82e",
    "metadata": {},
    "outputs": [
     {
@@ -2003,7 +2003,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "9fc5f8ec",
+   "id": "4cd0b308",
    "metadata": {},
    "outputs": [
     {
@@ -2035,9 +2035,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3daa9a60",
+   "metadata": {},
+   "source": [
+    "#### A conflict erupted in Central African Republic between the years 2009 and 2014 in our dataset directly affecting the GDP_Per_Capita."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6969422f",
+   "id": "eb84a7de",
    "metadata": {},
    "outputs": [],
    "source": []
