--- a/notebook/GDP .ipynb
+++ b/notebook/GDP .ipynb
@@ -230,7 +230,7 @@
    "id": "0e6b9ba0",
    "metadata": {},
    "source": [
-    "#### 98. Look at the shape of each DataFrame - how many rows? How many columns?"
+    "#### 7. Look at the shape of each DataFrame - how many rows? How many columns?"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "id": "3179db61",
    "metadata": {},
    "source": [
-    "#### 6.\tTake a look at the datatypes for the columns in each DataFrame."
+    "#### 8.\tTake a look at the datatypes for the columns in each DataFrame."
    ]
   },
   {
@@ -326,7 +326,7 @@
    "id": "0816c8c9",
    "metadata": {},
    "source": [
-    "#### 99. Take a look at the last 10 rows of each DataFrame in turn."
+    "#### 9. Take a look at the last 10 rows of each DataFrame in turn."
    ]
   },
   {
@@ -596,7 +596,7 @@
    "id": "8f050ff7",
    "metadata": {},
    "source": [
-    "#### 7.\tDrop the `value footnotes` column from both DataFrames. Check that this worked as expected."
+    "#### 10.\tDrop the `value footnotes` column from both DataFrames. Check that this worked as expected."
    ]
   },
   {
@@ -624,7 +624,7 @@
    "id": "4bf94da5",
    "metadata": {},
    "source": [
-    "#### 8.\tChange the columns for the GDP Per Capita DataFrame to ‘Country’, ‘Year’, and ‘GDP_Per_Capita’."
+    "#### 11.\tChange the columns for the GDP Per Capita DataFrame to ‘Country’, ‘Year’, and ‘GDP_Per_Capita’."
    ]
   },
   {
@@ -668,7 +668,7 @@
    "id": "905e5323",
    "metadata": {},
    "source": [
-    "#### 9.\tChange the columns for the Internet Users DataFrame to ‘Country’, ‘Year’, and ‘Internet_Users_Pct’."
+    "#### 12.\tChange the columns for the Internet Users DataFrame to ‘Country’, ‘Year’, and ‘Internet_Users_Pct’."
    ]
   },
   {
@@ -712,7 +712,7 @@
    "id": "2e8f4513",
    "metadata": {},
    "source": [
-    "#### 10.\tMerge the two DataFrames to one. Merge **all rows** from each of the two DataFrames. Call the new DataFrame `gdp_and_internet_use`."
+    "#### 13.\tMerge the two DataFrames to one. Merge **all rows** from each of the two DataFrames. Call the new DataFrame `gdp_and_internet_use`."
    ]
   },
   {
@@ -761,7 +761,7 @@
    "id": "68a476a8",
    "metadata": {},
    "source": [
-    "### 11.\tLook at the first five rows of your new DataFrame to confirm it merged correctly."
+    "#### 14.\tLook at the first five rows of your new DataFrame to confirm it merged correctly."
    ]
   },
   {
@@ -792,7 +792,7 @@
    "id": "8b5a5c5d",
    "metadata": {},
    "source": [
-    "##### 12.\tLook at the last five rows to make sure the data is clean and as expected."
+    "#### 15.\tLook at the last five rows to make sure the data is clean and as expected."
    ]
   },
   {
@@ -823,12 +823,12 @@
    "id": "b1165c78",
    "metadata": {},
    "source": [
-    "#### 13.\tSubset the combined DataFrame to keep only the data for 2004, 2009, and 2014. Check that this happened correctly.\n"
+    "#### 16.\tSubset the combined DataFrame to keep only the data for 2004, 2009, and 2014. Check that this happened correctly.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "id": "526915a4",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
    "id": "edce1c18",
    "metadata": {},
    "source": [
-    "#### 14.\tCreate three new DataFrames, one for 2004, one for 2009, and one for 2014. Give them meaningful names that aren't too long."
+    "#### 17.\tCreate three new DataFrames, one for 2004, one for 2009, and one for 2014. Give them meaningful names that aren't too long."
    ]
   },
   {
@@ -884,12 +884,12 @@
    "id": "5c49837e",
    "metadata": {},
    "source": [
-    "15.\tWhich country had the highest percentage of internet users in 2014? What was the percentage? (Try typing the first 3 letters of your DataFrame name and hitting the tab key for auto-complete options)."
+    "#### 18.\tWhich country had the highest percentage of internet users in 2014? What was the percentage? (Try typing the first 3 letters of your DataFrame name and hitting the tab key for auto-complete options)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "id": "15cc9120",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1020,7 @@
        "[238 rows x 4 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,16 +1035,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "796c2fa2",
+   "id": "27b2a619",
    "metadata": {},
    "source": [
-    "#### 16.\tWhich country had the lowest percentage of internet users in 2014? What was the percentage?"
+    "#### 19.\tWhich country had the lowest percentage of internet users in 2014? What was the percentage?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "01064c6a",
+   "execution_count": 25,
+   "id": "216df4a2",
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1174,7 @@
        "[238 rows x 4 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,16 +1188,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d166896",
+   "id": "129d1f9a",
    "metadata": {},
    "source": [
-    "#### 17. Repeat for 2004 and 2009."
+    "#### 20. Repeat for 2004 and 2009."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5ea0a952",
+   "id": "2c07dc46",
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bd36296",
+   "id": "1972fdc8",
    "metadata": {},
    "source": [
     "#### 21. Which country had the highest gdp per capita in 2014? What was the gdp per capita?"
@@ -1297,8 +1297,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "5d784ce8",
+   "execution_count": 27,
+   "id": "25734134",
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15c5819e",
+   "id": "276ed945",
    "metadata": {},
    "source": [
     "#### 22. Which country had the lowest gdp per capita in 2014? What was the gdp per capita?"
@@ -1341,8 +1341,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "632ced80",
+   "execution_count": 28,
+   "id": "e663d385",
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41809108",
+   "id": "bfe1dace",
    "metadata": {},
    "source": [
     "#### 23. Create some scatterplots:  \n",
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eddb9ea2",
+   "id": "fa34c5a4",
    "metadata": {},
    "source": [
     "   ##### 2004 Scatter Plot"
@@ -1396,8 +1396,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "e97aa486",
+   "execution_count": 29,
+   "id": "065cfa59",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "466fbd75",
+   "id": "9fcc281e",
    "metadata": {},
    "source": [
     "##### 2009 Scatter Plot"
@@ -1427,8 +1427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "1d1f5705",
+   "execution_count": 30,
+   "id": "a28a9792",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd332d0",
+   "id": "1e40c91c",
    "metadata": {},
    "source": [
     "##### 2014 Scatter Plot"
@@ -1458,8 +1458,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "e3ee9d61",
+   "execution_count": 31,
+   "id": "59c58c9f",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad3a082e",
+   "id": "330bbb00",
    "metadata": {},
    "source": [
     "#### 24. Are there differences across years? What do the plots tell you about any relationship between these two variables? Enter your observations as a markdown cell.\n",
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0691caba",
+   "id": "173b4aa3",
    "metadata": {},
    "source": [
     "#### 25. Look at the distribution of gdp per capita values for 2014. Is it unimodal?"
@@ -1499,8 +1499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "5655713c",
+   "execution_count": 32,
+   "id": "d99d6158",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26fb2125",
+   "id": "a65b330f",
    "metadata": {},
    "source": [
     "#### 26.\tLook at the distribution of Internet Use for 2014. Is it unimodal?"
@@ -1530,8 +1530,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "00719758",
+   "execution_count": 33,
+   "id": "2f9aed4b",
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51bf905b",
+   "id": "6af818a9",
    "metadata": {},
    "source": [
     "#### 27. What are the top 5 countries in terms of internet use in 2014?"
@@ -1561,8 +1561,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "952609f8",
+   "execution_count": 34,
+   "id": "34decad4",
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66830486",
+   "id": "238d4564",
    "metadata": {},
    "source": [
     "28. ##### Create a DataFrame called top_5_internet **from the combined DataFrame that has all three years _for the 5 countries that had the greatest 2014 internet usage_**. You should have 15 rows. Check that this is true."
@@ -1593,8 +1593,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "168802ec",
+   "execution_count": 35,
+   "id": "ab38b556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1608,8 +1608,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "453974e4",
+   "execution_count": 36,
+   "id": "cd1c5d1e",
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beaaf612",
+   "id": "f9b2bb22",
    "metadata": {},
    "source": [
     "#### 29. Create a seaborn FacetGrid to show the internet usage trend across the years 2004, 2009, and 2014 for these 5 countries (those with the highest reported internet use in 2014). Which country had the greatest growth between 2004 and 2014?"
@@ -1650,17 +1650,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "3f327a11",
+   "execution_count": 37,
+   "id": "d0cd1fa4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x20a80c549a0>"
+       "<seaborn.axisgrid.FacetGrid at 0x2712d5e48b0>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45aac00c",
+   "id": "4340e3cf",
    "metadata": {},
    "source": [
     "#### 30.Repeat the steps above to look at the trend for the 5 countries with the lowest 2014 internet usage. Which country has consistently had the least internet use?\n"
@@ -1694,8 +1694,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "f2196ce7",
+   "execution_count": 38,
+   "id": "0939e24e",
    "metadata": {},
    "outputs": [
     {
@@ -1720,8 +1720,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "fdb8d379",
+   "execution_count": 39,
+   "id": "b4267359",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,8 +1735,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "404d49af",
+   "execution_count": 40,
+   "id": "ddb3b0c9",
    "metadata": {},
    "outputs": [
     {
@@ -1770,17 +1770,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "29d1f3c5",
+   "execution_count": 41,
+   "id": "f0ea7a8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x20a8067d280>"
+       "<seaborn.axisgrid.FacetGrid at 0x2712d7a3cd0>"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95fa3c9a",
+   "id": "cff8705d",
    "metadata": {},
    "source": [
     "#### 31. Find the top 5 countries for 2014 in terms of GDP per capita; create a DataFrame to look at 10-year trends (use 2004, 2009, 2014 to look at the 10-year trend) in gdp per capita for the 5 countries with the highest 2014 GDP per capita. Use a seaborn facet grid for this."
@@ -1812,8 +1812,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "df19515d",
+   "execution_count": 42,
+   "id": "53a10143",
    "metadata": {},
    "outputs": [
     {
@@ -1836,8 +1836,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "11848fe8",
+   "execution_count": 43,
+   "id": "fa8141ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1851,8 +1851,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "2233b5b3",
+   "execution_count": 44,
+   "id": "e227d776",
    "metadata": {},
    "outputs": [
     {
@@ -1886,17 +1886,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "918d4ec1",
+   "execution_count": 45,
+   "id": "77e1da7c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x20a80e45fd0>"
+       "<seaborn.axisgrid.FacetGrid at 0x2712d990f40>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7863b42a",
+   "id": "a70621aa",
    "metadata": {},
    "source": [
     "#### 32. Repeat this one more time to look at 10-year trend for the 5 countries for 2014 with the lowest GDP per capita."
@@ -1928,8 +1928,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "9888e6c6",
+   "execution_count": 46,
+   "id": "4aba2094",
    "metadata": {},
    "outputs": [
     {
@@ -1952,8 +1952,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "17b4fc43",
+   "execution_count": 47,
+   "id": "9f6af1c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1967,8 +1967,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "c7c7e82e",
+   "execution_count": 48,
+   "id": "b36f08d8",
    "metadata": {},
    "outputs": [
     {
@@ -2002,17 +2002,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "4cd0b308",
+   "execution_count": 49,
+   "id": "349cfb89",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x20a822b2fa0>"
+       "<seaborn.axisgrid.FacetGrid at 0x2712d30ad90>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2036,7 +2036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3daa9a60",
+   "id": "b0b248b3",
    "metadata": {},
    "source": [
     "#### A conflict erupted in Central African Republic between the years 2009 and 2014 in our dataset directly affecting the GDP_Per_Capita."
@@ -2045,7 +2045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb84a7de",
+   "id": "cfbf963d",
    "metadata": {},
    "outputs": [],
    "source": []
